# coco-ip

./: .gitignore  CMakeLists.txt  README.md  ccreate.py  cinstall.py  conanfile.py
coco/: CMakeLists.txt  IpSocket.cpp  IpSocket.hpp  UdpSocket.hpp  ip.hpp
coco/native/coco/platform/: IpSocket_Win32.cpp  IpSocket_Win32.hpp  IpSocket_io_uring.cpp  IpSocket_io_uring.hpp  IpSocket_native.hpp  UdpSocket_Win32.cpp  UdpSocket_Win32.hpp  UdpSocket_io_uring.cpp  UdpSocket_io_uring.hpp  UdpSocket_native.hpp  ip.cpp
test/: CMakeLists.txt  ConnectedUdp4SocketTest.cpp  ConnectedUdp6SocketTest.cpp  Tcp4SocketTest.cpp  Udp4SocketTest.cpp  Udp6SocketTest.cpp  gTest.cpp
test/native/: ConnectedUdpSocketTest.hpp  TcpSocketTest.hpp  UdpSocketTest.hpp
